<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="303dp"
        android:layout_height="145dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/re2logo" />

    <Button
        android:id="@+id/btnhistoria"
        android:layout_width="264dp"
        android:layout_height="86dp"
        android:layout_marginTop="153dp"
        android:backgroundTint="#343434"
        android:text="@string/historia"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnpersonagem"
        android:layout_width="264dp"
        android:layout_height="86dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#343434"
        android:text="@string/personagem"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnhistoria" />

    <Button
        android:id="@+id/btnboss"
        android:layout_width="264dp"
        android:layout_height="86dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#343434"
        android:text="@string/boss"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpersonagem" />

    <Button
        android:id="@+id/btnextra"
        android:layout_width="264dp"
        android:layout_height="86dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#343434"
        android:text="@string/extra"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnboss" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/conheca"
        android:textColor="#ffffff"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnextra" />

    <ImageButton
        android:id="@+id/ibtnumbrella"
        android:layout_width="67dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/umbrella"
        android:onClick="jogos"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>