<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    tools:context=".personagens">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/ibtncasa"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/ibtnvoltar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/personagens" />

    <ImageButton
        android:id="@+id/ibtnvoltar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/voltar"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtncasa"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/casa"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="397dp"
        android:layout_height="630dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="381dp"
                android:layout_height="1165dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btnleon"
                    android:layout_width="345dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn"
                    app:backgroundTint="#343434" />

                <ImageView
                    android:layout_width="158dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="-40dp"
                    android:layout_marginTop="-165dp"
                    android:src="@drawable/leon" />

                <TextView
                    android:id="@+id/leon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="-155dp"
                    android:text="@string/leon"
                    android:textColor="#fd0038"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/personagem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/protagonista"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/leonh"
                    android:layout_width="246dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/leonh"
                    android:textColor="#ffffff"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/btnclaire"
                    android:layout_width="345dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn"
                    app:backgroundTint="#343434" />

                <ImageView
                    android:layout_width="158dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="-40dp"
                    android:layout_marginTop="-165dp"
                    android:src="@drawable/claire" />

                <TextView
                    android:id="@+id/claire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="-155dp"
                    android:text="@string/claire"
                    android:textColor="#fd0038"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/personagem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/protagonista"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/claireh"
                    android:layout_width="246dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/claireh"
                    android:textColor="#ffffff"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/btnada"
                    android:layout_width="345dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn"
                    app:backgroundTint="#343434" />

                <ImageView
                    android:layout_width="158dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="-40dp"
                    android:layout_marginTop="-165dp"
                    android:src="@drawable/ada" />

                <TextView
                    android:id="@+id/ada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="-155dp"
                    android:text="@string/ada"
                    android:textColor="#fd0038"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/personagem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/influente"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/adah"
                    android:layout_width="246dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/adah"
                    android:textColor="#ffffff"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/btsherry"
                    android:layout_width="345dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn"
                    app:backgroundTint="#343434" />

                <ImageView
                    android:layout_width="158dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="-40dp"
                    android:layout_marginTop="-165dp"
                    android:src="@drawable/sherry" />

                <TextView
                    android:id="@+id/sherry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="-155dp"
                    android:text="@string/sherry"
                    android:textColor="#fd0038"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/personagem4"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/influente"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/sherryh"
                    android:layout_width="246dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/sherryh"
                    android:textColor="#ffffff"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/btnbrian"
                    android:layout_width="345dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn"
                    app:backgroundTint="#343434" />

                <ImageView
                    android:layout_width="158dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="-40dp"
                    android:layout_marginTop="-165dp"
                    android:src="@drawable/brian" />

                <TextView
                    android:id="@+id/brian"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="-155dp"
                    android:text="@string/brian"
                    android:textColor="#fd0038"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/personagem5"
                    android:layout_width="73dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/influente"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/brianh"
                    android:layout_width="246dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/brianh"
                    android:textColor="#ffffff"
                    android:textSize="13dp" />

                <Button
                    android:id="@+id/btnannette"
                    android:layout_width="345dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn"
                    app:backgroundTint="#343434" />

                <ImageView
                    android:layout_width="158dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="-20dp"
                    android:layout_marginTop="-165dp"
                    android:src="@drawable/annette" />

                <TextView
                    android:id="@+id/annette"
                    android:layout_width="148dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="-155dp"
                    android:text="@string/annette"
                    android:textColor="#fd0038"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/personagem6"
                    android:layout_width="76dp"
                    android:layout_height="23dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/influente"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/annetteh"
                    android:layout_width="246dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/annetteh"
                    android:textColor="#ffffff"
                    android:textSize="13dp" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>